test/examples/good/let_with_existing_constraint.ml
(* Val with let that already has type annotations *)
val f : int -> int
let f (x : int) : int = x + 1
