test/examples/bad/val_after_let.ml
(* val should not apply to a let that comes before it *)
let x = 42
val x : int
